# silverratio-jeopardy

./: README.md  jeopardy.glade  silverratio-jeopardy.cabal
Sounds/: README
src/: jeopardy-compiler.hs  jeopardy-dump.hs  jeopardy-editor.hs  jeopardy.hs
src/Jeopardy/: Compiler.hs  Data.hs  GUI.hs  Utils.hs
